force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Active_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if a promotion of this template is initially active or if a tactic of this type is initially pre-set as included in the promotion (not considered if the tactic is manually added to the promotion!)</description>
    <inlineHelpText>Determines if promotion is active by default.</inlineHelpText>
    <label>Active Policy</label>
    <type>Checkbox</type>
</CustomField>