force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Additional_Custom_Main_KPI_Subsets__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Additional_Custom_Main_KPI_Subsets__c</fullName>
    <description>Used when Subset Load Optimization is enabled to specify subsets that must be additionally loaded while opening a promotion.</description>
    <label>Additional Custom Main KPI Subsets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__KPI_Subsets</valueSetName>
    </valueSet>
</CustomField>