force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Adjustment_KPI_1_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_KPI_1_Description__c</fullName>
    <formula>cgcloud__Adjustment_KPI_1__r.cgcloud__KPI_Definition__r.cgcloud__Description__c</formula>
    <label>Adjustment KPI 1 Description</label>
    <type>Text</type>
</CustomField>