force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Adjustment_KPI_1_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_KPI_1_Name__c</fullName>
    <formula>cgcloud__Adjustment_KPI_1__r.cgcloud__KPI_Definition__r.Name</formula>
    <label>Adjustment KPI 1 Name</label>
    <type>Text</type>
</CustomField>