force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Adjustment_KPI_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_KPI_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjustment KPI 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__KPI_Set__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__KPI_Set_KPI_Definition__c.cgcloud__KPI_Set__c</valueField>
        </filterItems>
        <filterItems>
            <field>cgcloud__KPI_Set_KPI_Definition__c.cgcloud__KPI_Definition__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Editable, Editable Calculated</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__KPI_Set_KPI_Definition__c.cgcloud__KPI_Tactic_Dependent__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Set_KPI_Definition__c</referenceTo>
    <relationshipLabel>Promotion Templates (Adjustment KPI 3)</relationshipLabel>
    <relationshipName>Promotion_Templates3</relationshipName>
    <type>Lookup</type>
</CustomField>