force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Adjustment_KPI_3_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Adjustment_KPI_3_Description__c</fullName>
    <formula>cgcloud__Adjustment_KPI_3__r.cgcloud__KPI_Description__c</formula>
    <label>Adjustment KPI 3 Description</label>
    <type>Text</type>
</CustomField>