force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Type__c</fullName>
    <description>Specifies the anchor type of the promotion.</description>
    <label>Anchor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>CustomerSet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>