force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Auto_Close_On_Filter_Apply__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Auto_Close_On_Filter_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the manage product modal window is closed automatically after applying the filters.</description>
    <inlineHelpText>Determines if the manage product modal window is closed automatically after applying the filters.</inlineHelpText>
    <label>Auto Close On Filter Apply</label>
    <type>Checkbox</type>
</CustomField>