force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Available_Product_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Available_Product_Level__c</fullName>
    <label>Available Product Aggregation Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>