force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Available_Time_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Available_Time_Level__c</fullName>
    <description>Select time intervals for viewing and editing KPIs in a promotion.</description>
    <label>Time Intervals for KPIs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Time_Level</valueSetName>
    </valueSet>
</CustomField>