force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__BOM_Handler__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BOM_Handler__c</fullName>
    <description>Determines whether BOM products will be considered in promotions created using the template.</description>
    <label>BOM Handling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>ExcludeBOMs</fullName>
                <label>Exclude BOMs</label>
            </value>
            <value>
                <fullName>ConsiderBOMs</fullName>
                <label>Consider BOMs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>