force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Mode__c</fullName>
    <label>Calculation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Promotion_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>AdHoc</fullName>
            </value>
            <value>
                <fullName>Writeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>