force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Calculation_Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Calculation_Sort__c</fullName>
    <description>Calculation Sort Order Number. Defines in which order different promotion types are calculated (At the moment for Account Plan Calculation only).</description>
    <label>Calculation Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>