force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Consider_Account_Product_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Account_Product_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates if Account Product List is considered for Promotions</description>
    <inlineHelpText>Determines if Account Product List is considered to determine valid products.</inlineHelpText>
    <label>Consider Account Product List</label>
    <type>Checkbox</type>
</CustomField>