force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Consider_Listing__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls, whether all products of active listings are considered when bringing back the products that are part of the promoted cluster or product group according to the specified listing finding template.</description>
    <label>Consider Listing</label>
    <type>Checkbox</type>
</CustomField>