force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Consider_Product_KAM_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Product_KAM_Status__c</fullName>
    <description>Specifies which promotion dates are used to determine valid products based on KAM Status.</description>
    <inlineHelpText>Defines which promotion dates should be used to determine valid products based on KAM Status.</inlineHelpText>
    <label>Consider Product KAM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PromotionCommitDate</fullName>
                <default>true</default>
                <label>Promotion Commit Date</label>
            </value>
            <value>
                <fullName>PromotionTimeframe</fullName>
                <label>Promotion Timeframe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>