force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Consider_Promotion_Rewards__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_Promotion_Rewards__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the promotion is considered for rewards.</description>
    <label>Consider Promotion Rewards</label>
    <type>Checkbox</type>
</CustomField>