force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Creation_Platform__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Creation_Platform__c</fullName>
    <description>Indicates, on which platform this template can be used for new creation of promotions.</description>
    <label>Creation Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>