force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Display_Fund_Card__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Fund_Card__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if fund card is enabled for promotions created using this template.</description>
    <inlineHelpText>Determines if fund card is enabled for promotions created using this template.</inlineHelpText>
    <label>Enable Fund Card in Promotion</label>
    <type>Checkbox</type>
</CustomField>