force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Display_In_Visit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_In_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The promotion will be displayed in a visit if, at the visit date, the promotion is valid for the business partner of the visit.</description>
    <label>Display In visit</label>
    <type>Checkbox</type>
</CustomField>