force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Display_KPI_Validations_Only_On_Save__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_KPI_Validations_Only_On_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if KPI validations are displayed only on save while editing the promotion.</description>
    <inlineHelpText>Determines if KPI validations are displayed only on save while editing the promotion.</inlineHelpText>
    <label>Display KPI Validations Only on Save</label>
    <type>Checkbox</type>
</CustomField>