force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Display_SPC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_SPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SPC Should display depending upon this checkbox field</description>
    <label>Display SPC</label>
    <type>Checkbox</type>
</CustomField>