force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Display_VPC__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_VPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display VPC</description>
    <label>Display VPC</label>
    <type>Checkbox</type>
</CustomField>