force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Enable_Condition_Creation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Condition_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Condition Creation</label>
    <type>Checkbox</type>
</CustomField>