force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Enable_Scenario_Planning__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enable_Scenario_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates scenario planning for promotions of this type.</description>
    <label>Enable Scenario Planning</label>
    <type>Checkbox</type>
</CustomField>