force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Ignore_Time_When_Deleting_The_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Ignore_Time_When_Deleting_The_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Determines whether the lead time and the follow-up time of a TMP promotion are ignored when promotions are deleted</inlineHelpText>
    <label>Ignore Time When Deleting The Promotion</label>
    <type>Checkbox</type>
</CustomField>