force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Is_Copyable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Copyable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copyable</label>
    <type>Checkbox</type>
</CustomField>