force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Is_Derivable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Derivable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Promotion Template can be used for derive</description>
    <label>Derivable</label>
    <type>Checkbox</type>
</CustomField>