force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Is_Pushable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Pushable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether Promotion Template is pushable or not.</description>
    <label>Pushable</label>
    <type>Checkbox</type>
</CustomField>