force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Is_Transfer_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Transfer_Relevant__c</fullName>
    <label>Is Transfer Relevant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>