force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Mass_Copy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mass_Copy_Start_Date__c</fullName>
    <description>Controls how the dates of new promotions are determined when promotions are copied via the Mass Copy process.</description>
    <inlineHelpText>Controls how the dates of new promotions are determined when promotions are copied via the Mass Copy process.</inlineHelpText>
    <label>Mass Copy Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Weekday</fullName>
                <default>true</default>
                <label>Weekday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>