force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Mobility_Color__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_Color__c</fullName>
    <description>Color used for displaying the promotion.</description>
    <label>Mobility Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Plum</fullName>
            </value>
            <value>
                <fullName>Khaki 2</fullName>
            </value>
            <value>
                <fullName>Turquoise 2</fullName>
            </value>
            <value>
                <fullName>Sky Blue 2</fullName>
            </value>
            <value>
                <fullName>Periwinkle Blue</fullName>
            </value>
            <value>
                <fullName>Yellow Orange</fullName>
            </value>
            <value>
                <fullName>Sage Green</fullName>
            </value>
            <value>
                <fullName>Grey Blue</fullName>
            </value>
            <value>
                <fullName>Sea Green 2</fullName>
            </value>
            <value>
                <fullName>Dark Orange</fullName>
            </value>
            <value>
                <fullName>Cranberry Red</fullName>
            </value>
            <value>
                <fullName>Ink Blue</fullName>
            </value>
            <value>
                <fullName>Lime Green 2</fullName>
            </value>
            <value>
                <fullName>Red Violet</fullName>
            </value>
            <value>
                <fullName>Coral</fullName>
            </value>
            <value>
                <fullName>Corn Flower Blue</fullName>
            </value>
            <value>
                <fullName>Dark Salmon</fullName>
            </value>
            <value>
                <fullName>Dark Sea Green</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Golden Rod</fullName>
            </value>
            <value>
                <fullName>Light Blue</fullName>
            </value>
            <value>
                <fullName>Light Coral</fullName>
            </value>
            <value>
                <fullName>Light Salmon</fullName>
            </value>
            <value>
                <fullName>Light Sea Green</fullName>
            </value>
            <value>
                <fullName>Light Sky Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>