force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Number_Of_Push_Usage_Hierarchies__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Number_Of_Push_Usage_Hierarchies__c</fullName>
    <description>Number of Child Templates with Usage as &quot;Push&quot; in the Hierarchy</description>
    <label>Number Of Push Usage Hierarchies</label>
    <summaryFilterItems>
        <field>cgcloud__Promotion_Template_Hierarchy__c.cgcloud__Usage__c</field>
        <operation>equals</operation>
        <value>Push</value>
    </summaryFilterItems>
    <summaryForeignKey>cgcloud__Promotion_Template_Hierarchy__c.cgcloud__Parent_Promotion_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>