force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Product_Definition_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Definition_Level__c</fullName>
    <label>Product Definition Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Tactic</fullName>
                <default>true</default>
                <label>Tactic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>