force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Product_Definition_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Definition_Policy__c</fullName>
    <label>Product Definition Policy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamic</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>