force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Promo_Phases_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promo_Phases_Cleaning__c</fullName>
    <description>Promotion phases in which promotion cleaning (scenarios, inactive tactics) will happen. Depends on the global picklist &quot;Promotion_Phases&quot;</description>
    <inlineHelpText>Defines the promotion phases in which promotion cleaning (scenarios, inactive tactics) will happen.</inlineHelpText>
    <label>Promo Phases Cleaning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Promotion_Phases</valueSetName>
    </valueSet>
</CustomField>