force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>SellablePromotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>