force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Push_Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Push_Process_Flow__c</fullName>
    <description>Promotion push process type</description>
    <label>Push Process Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>calculate</fullName>
            </value>
            <value>
                <fullName>distributeAndCalculate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>