force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Selectable_Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Selectable_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the promotion is auto granted or selectable by selecting the corresponding checkbox.</description>
    <label>Selectable Promotion</label>
    <type>Checkbox</type>
</CustomField>