force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Special_Order_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Special_Order_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates whether Promotion is special order relevant or not.</description>
    <inlineHelpText>Flag indicates whether Promotion is special order relevant or not.</inlineHelpText>
    <label>Special Order Relevant</label>
    <type>Checkbox</type>
</CustomField>