force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Sub_Accounts_Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sub_Accounts_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the Sub Account Planning feature is enabled for the promotions with this template. This checkbox can only be enabled if Anchor Type is Customer</description>
    <inlineHelpText>Defines if the Sub Account Planning feature is enabled for the promotions with this template. This checkbox can only be enabled if Anchor Type is Customer</inlineHelpText>
    <label>Sub Accounts Enabled</label>
    <type>Checkbox</type>
</CustomField>