force-app/main/default/objects/cgcloud__Promotion_Template__c/fields/cgcloud__Synchronize_Promotion_Timeframes__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Synchronize_Promotion_Timeframes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is set TRUE, the dates Shipment Dates From and Thru and InStore From and Thru dates will have always the values set in Date From and Date Thru.</description>
    <inlineHelpText>If this field is set TRUE, the dates Shipment Dates From and Thru and InStore From and Thru dates will have always the values set in Date From and Date Thru.</inlineHelpText>
    <label>Synchronize Promotion Timeframes</label>
    <type>Checkbox</type>
</CustomField>